Thu Jun 12 21:59:17 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c, vm_core.h, vm.c, thread_pthread.c, thread_win32.c: add
	  deadlock detection.  [ruby-dev:35044]

	* bootstraptest/test_thread.rb: add tests for above.

Thu Jun 12 21:39:55 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: refactoring.

	* rational.c: ditto.

Thu Jun 12 17:11:24 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regint.h: undefine USE_CAPTURE_HISTORY which is mentioned as
	  unsupported in the Onigiruma document.

Thu Jun 12 13:36:54 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (rb_intern): use rb_intern2 with strlen for
	  constant symbols to optimize strlen.

Thu Jun 12 08:47:51 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (read_all): should use io_read_encoding(), not
	  io_input_encoding().

	* io.c (rb_io_getline_1): reduce calling of io_read_encoding().

	* string.c (rb_str_scan): need not to restore $~ value, so avoid
	  pinning match object.

Thu Jun 12 02:49:40 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/stringio/stringio.c (strio_init): rewind when reopened.

Thu Jun 12 02:43:27 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_zip): ANSI style.

Thu Jun 12 02:25:54 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_reopen): clear read buffer.

Thu Jun 12 00:56:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk: check proper conditions.  [ruby-dev:35047]

Wed Jun 11 23:33:13 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (io_fread): bypass buffered read if reading buffer is empty.

	* io.c (remain_size): do not add extra one byte.

Wed Jun 11 12:15:17 2008  Tanaka Akira  <akr@fsij.org>

	* bootstraptest/runner.rb (assert_normal_exit): hide stderr output
	  when success.

Wed Jun 11 09:26:43 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (encs): need to pass miniruby path for windows.

Wed Jun 11 05:53:20 2008  Koichi Sasada  <ko1@atdot.net>

	* vm.c, eval_intern.h (PASS_PASSED_BLOCK):