@@ -1,3 +1,7 @@
+Thu Jun 12 22:19:45 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* thread_win32.c (native_sleep): fixed previous commit.
+
 Thu Jun 12 21:59:17 2008  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* thread.c, vm_core.h, vm.c, thread_pthread.c, thread_win32.c: add
